# rusty-blox

./: .dockerignore  .git-blame-ignore-revs  .gitignore  Cargo.toml  Dockerfile  LICENSE  QUICK_DEPLOY.sh  README.md  TOOLS.md  build.rs  config.toml  config.toml.example  docker-compose.prod.yml  docker-compose.yml  install-service.sh  main.rs  run_reset.sh  rust-toolchain.toml  rustyblox.service  test_api.sh  test_api_improvements.sh  test_new_features.sh  test_spent_detection.sh
.github/: dependabot.yml
.github/workflows/: build.yaml  docker.yml  frontend.yaml
examples/: heal_verify.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend-legacy/: .dockerignore  .env.production  Dockerfile  README_LEGACY.md  README_OLD.md  index.html  index.html.legacy  nginx.conf  package-lock.json  package.json  vite.config.js
frontend-legacy/public/: robots.txt  sitemap.xml
frontend-legacy/src/: App.vue  main.js
frontend-legacy/src/assets/styles/: base.css  utilities.css  variables.css
frontend-legacy/src/components/analytics/: ColdStakingTrend.vue  HodlWaves.vue  NetworkHealth.vue  NetworkSnapshots.vue  RichList.vue  StakingAnalytics.vue  SupplyAnalytics.vue  TransactionAnalytics.vue  TreasuryHistory.vue
frontend-legacy/src/components/blocks/: BlockRow.vue
frontend-legacy/src/components/charts/: BaseChart.vue  TimeRangeSelector.vue
frontend-legacy/src/components/common/: Badge.vue  BlockCard.vue  Button.vue  Card.vue  CopyButton.vue  EmptyState.vue  HashDisplay.vue  Icon.vue  InfoRow.vue  InputOutputTable.vue  LiveIndicator.vue  LoadingSpinner.vue  Modal.vue  Pagination.vue  PriceCard.vue  SkeletonLoader.vue  StatCard.vue  Tabs.vue  TransactionRow.vue
frontend-legacy/src/components/dashboard/: BlockTimeline.vue  KpiBand.vue  SyncProgressCard.vue  SyncStatusPill.vue
frontend-legacy/src/components/governance/: BudgetSimulator.vue
frontend-legacy/src/components/layout/: AppFooter.vue  AppHeader.vue  AppLayout.vue  MobileMenu.vue  SearchBar.vue
frontend-legacy/src/composables/: useBudgetSimulation.js  useCharts.js  useCurrency.js  useWebSocket.js
frontend-legacy/src/router/: index.js
frontend-legacy/src/services/: addressService.js  analyticsService.js  api.js  blockService.js  chainService.js  governanceService.js  masternodeService.js  searchService.js  transactionService.js
frontend-legacy/src/stores/: chainStore.js  priceStore.js  settingsStore.js  websocketStore.js
frontend-legacy/src/utils/: chartTheme.js  constants.js  csv.js  formatters.js  governanceStatus.js  transactionHelpers.js
frontend-legacy/src/views/: AddressDetail.vue  AnalyticsDashboard.vue  BlockDetail.vue  BlockList.vue  Dashboard.vue  GovernanceDashboard.vue  MasternodeDetail.vue  MasternodeList.vue  MempoolDashboard.vue  NotFound.vue  ProposalDetail.vue  SearchResults.vue  TransactionDetail.vue  XPubDetail.vue
frontend-vue/: .dockerignore  .env.example  .env.production  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend-vue/src/: App.vue  main.js
frontend-vue/src/router/: index.js
frontend-vue/src/services/: analyticsService.js  api.js  governanceService.js  index.js  masternodeService.js
frontend-vue/src/stores/: chainStore.js  settingsStore.js
frontend-vue/src/views/: AddressDetail.vue  AnalyticsDashboard.vue  BlockDetail.vue  BlockList.vue  Dashboard.vue  GovernanceDashboard.vue  MasternodeDetail.vue  MasternodeList.vue  MempoolDashboard.vue  NotFound.vue  ProposalDetail.vue  SearchResults.vue  TransactionDetail.vue  XPubDetail.vue
frontend/src/: App.vue  main.js  router.js  store.js
frontend/src/api/: client.js  mock.js
frontend/src/components/: BudgetSimulator.vue  CommandPalette.vue  Copyable.vue  EChart.vue  HudPanel.vue  Stat.vue
frontend/src/lib/: chart.js  coinstake.js  format.js  money.js
frontend/src/styles/: futurist.css  tokens.css
frontend/src/views/: AddressDetail.vue  Analytics.vue  BlockDetail.vue  BlockList.vue  Dashboard.vue  Governance.vue  MasternodeDetail.vue  MasternodeList.vue  Mempool.vue  NotFound.vue  ProposalDetail.vue  SearchResults.vue  TransactionDetail.vue  XPubDetail.vue
ops/: LIVE_METRICS_EXAMPLES.md  NATIVE_SETUP.md  QUICKSTART.md  README.md  create_dashboard_v2.py  docker-compose.yml  start-grafana.sh  start-monitoring.sh  start-prometheus.sh  stop-monitoring.sh
ops/grafana/: DASHBOARD_PLAN.md
ops/grafana/dashboards/: rustyblox-improved.json
ops/prometheus/: alerts.yml  prometheus.yml
scripts/: bench-sync.sh
src/: address.rs  address_rollback.rs  analytics_live.rs  analytics_recompute.rs  api.rs  api.rs.old  api.rs.save  atomic_writer.rs  batch_writer.rs  batch_writer_tests.rs  blk_tail.rs  block_detail.rs  block_index.rs  blocks.rs  build_address_undo.rs  cache.rs  canonical_chain.rs  chain_state.rs  chainstate.rs  chainstate_leveldb.rs  chainwork.rs  config.rs  constants.rs  crash_recovery.rs  db_handles.rs  db_sampler.rs  db_utils.rs  emission.rs  enrich_addresses.rs  enrich_from_chainstate.rs  fee_calculation.rs  forks.rs  height_resolver.rs  leveldb_index.rs  lib.rs  main.rs  maturity.rs  mempool.rs  metrics.rs  monitor.rs  (+20 more)
src/api/: addresses.rs  analytics.rs  blocks.rs  governance.rs  helpers.rs  masternodes.rs  mod.rs  network.rs  price.rs  search.rs  transactions.rs  types.rs  xpub_tests.rs
src/quark/: quark.c  sph_types.h
tools/: README.md
tools/diagnostics/: Cargo.toml  analyze_orphans.rs  check_db.rs  check_txid_format.rs  compare_address.py  count_orphans.rs  db_query.rs  diagnose_address.rs  diagnose_tx.rs  dump_addr_snapshot.rs  find_xpub_address.rs  inspect_leveldb.rs  live_debug.rs  reenrich.rs  verify_txid_format.rs
tools/export/: export_txids.rs
tools/maintenance/: build_orphan_index.rs  clear_height_flag.rs  db_marker.rs  import_chainstate.rs  mark_orphaned_zero_height.rs  rebuild_address_index.rs  reset_live_watermark.rs  revalidate_all_heights.rs  validate_all_tx_heights.rs
tools/migration/: backfill_offsets.rs
tools/testing/: test_parser.rs
tools/validation/: validate_sync.rs
(+20 files in other folders)
