[package]
name = "rustyblox"
version = "0.1.0"
authors = ["Liquid369"]
edition = "2021"

[[bin]]
name = "rustyblox"
path = "src/main.rs"

[dependencies]
hex = "0.4.3"
rocksdb = "0.21.0"
byteorder = "1.3"
bitcoin = "0.26.0"
fs2 = "0.4.3"
config = "0.13.1"
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
base64 = "0.13"
db-key = "0.0.5"
sha2 = "0.9"
ripemd160 = "0.9.0"
bs58 = "0.5.0"
bincode = "1.3"
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.8.0"
lazy_static = "1.4.0"
axum = { version = "0.8.4", features = ["ws"] }
futures = "0.3"
tokio-stream = "0.1.15"
lru = "0.12"
rusty-leveldb = "3.0"
throttled_json_rpc = "0.0.6"
pivx_rpc_rs = { path = "../pivx-rpc-rs", version = "0.1.0" }

[build-dependencies]
cc = "1.0"
