[package]
name = "rustyblox"
version = "0.1.0"
authors = ["Liquid369"]
edition = "2021"

[features]
# Opt-in extra address-index diagnostics (e.g. logging skipped duplicate UTXOs
# during reorg/reindex). Off by default; enable with --features debug-address-index.
debug-address-index = []

[[bin]]
name = "rustyblox"
path = "src/main.rs"

# Essential diagnostic tools
[[bin]]
name = "check-db"
path = "tools/diagnostics/check_db.rs"

[[bin]]
name = "diagnose-address"
path = "tools/diagnostics/diagnose_address.rs"

[[bin]]
name = "count-orphans"
path = "tools/diagnostics/count_orphans.rs"

[[bin]]
name = "inspect-leveldb"
path = "tools/diagnostics/inspect_leveldb.rs"

[[bin]]
name = "db-query"
path = "tools/diagnostics/db_query.rs"

[[bin]]
name = "live-debug"
path = "tools/diagnostics/live_debug.rs"

# Essential maintenance tools
[[bin]]
name = "rebuild-address-index"
path = "tools/maintenance/rebuild_address_index.rs"

# Essential validation tools
[[bin]]
name = "validate-sync"
path = "tools/validation/validate_sync.rs"

# Essential migration tools
[[bin]]
name = "backfill-offsets"
path = "tools/migration/backfill_offsets.rs"

# Essential export tools
[[bin]]
name = "export-txids"
path = "tools/export/export_txids.rs"

# Essential testing tools
[[bin]]
name = "test-parser"
path = "tools/testing/test_parser.rs"

# Height revalidation tool
[[bin]]
name = "revalidate-heights"
path = "tools/maintenance/revalidate_all_heights.rs"

# Mark orphaned zero-height transactions
[[bin]]
name = "mark-orphaned-zero-height"
path = "tools/maintenance/mark_orphaned_zero_height.rs"

# Validate ALL transaction heights against canonical chain
[[bin]]
name = "validate-all-tx-heights"
path = "tools/maintenance/validate_all_tx_heights.rs"

# Chainstate import and verification
[[bin]]
name = "import-chainstate"
path = "tools/maintenance/import_chainstate.rs"

# chain_state marker admin (get/set/clear e.g. address_index_complete)
[[bin]]
name = "db-marker"
path = "tools/maintenance/db_marker.rs"

# Live daily-analytics ops: rebuild the persistent orphan index
[[bin]]
name = "build-orphan-index"
path = "tools/maintenance/build_orphan_index.rs"

# Live daily-analytics ops: reset the live watermark + rebuild recent days
[[bin]]
name = "reset-live-watermark"
path = "tools/maintenance/reset_live_watermark.rs"

[dependencies]
# jemalloc global allocator: returns freed memory to the OS far more aggressively
# than the system allocator (the macOS default retained the per-tx deserialization
# churn, inflating enrichment RSS). Set as #[global_allocator] in each binary root.
tikv-jemallocator = "=0.6.0"
# Direct handle to jemalloc's mallctl (already in the lock via jemallocator) so
# the sync can force an arena purge at the parse->enrich phase boundary, handing
# freed-but-retained parse/resolve pages back to the OS.
tikv-jemalloc-sys = "=0.6.0"
hex = "0.4.3"
rocksdb = "0.21.0"
byteorder = "1.3"
bitcoin = "0.26.0"
fs2 = "0.4.3"
config = "0.15.24"
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
base64 = "0.13"
db-key = "0.0.5"
sha2 = "0.9"
ripemd160 = "0.9.0"
bs58 = "0.5.0"
bincode = "1.3"
secp256k1 = { version = "0.27", features = ["recovery", "global-context"] }
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.8.0"
lazy_static = "1.4.0"
axum = { version = "0.8.4", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "timeout", "fs"] }
futures = "0.3"
tokio-stream = "0.1.15"
tokio-util = { version = "0.7", features = ["io"] }
lru = "0.16"
rusty-leveldb = "3.0"
throttled_json_rpc = "0.0.6"
pivx_rpc_rs = "0.1.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
num-bigint = "0.4"
num-traits = "0.2"
clap = { version = "4.0", features = ["derive"] }
shellexpand = "3.0"

# Structured logging (tracing)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

# Metrics (Prometheus)
prometheus = { version = "0.14.0", features = ["process"] }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tempfile = "3.8"

# Clippy policy (enforced by `cargo clippy` locally AND in CI). Every clippy::all
# lint is denied by default, so any NEW violation -- including the entire
# correctness/suspicious/perf set, which currently has zero hits -- fails the build.
# The allow-list is the reviewed baseline (2026-06-27): existing style/complexity
# nits across battle-tested consensus + sync code, exempted because a cosmetic
# rewrite of byte-exact paths risks more than the lint saves. Remove an entry here
# once its sites are cleaned up, to ratchet strictness upward over time.
[lints.clippy]
all = { level = "deny", priority = -1 }

# Structural / deliberate API shapes (not bugs):
too_many_arguments = "allow" # consensus + sync entry points genuinely take many params
type_complexity = "allow"    # explicit iterator/closure types kept inline on purpose
result_large_err = "allow"   # large error enums by value; boxing is a churny API change
ptr_arg = "allow"            # &PathBuf/&Vec params; not worth re-typing signatures + callers

# Cosmetic style nits (no behavior impact, multi-site):
uninlined_format_args = "allow"
manual_flatten = "allow"
needless_borrows_for_generic_args = "allow"
len_zero = "allow"
unnecessary_cast = "allow"
useless_conversion = "allow"
wildcard_in_or_patterns = "allow"
nonminimal_bool = "allow"
inconsistent_digit_grouping = "allow"

# Doc-comment formatting nits:
doc_lazy_continuation = "allow"
doc_overindented_list_items = "allow"
empty_line_after_doc_comments = "allow"
